altera resources de idiomas

--- a/src/main/resources/texto_en_US.properties
+++ b/src/main/resources/texto_en_US.properties
@@ -8,7 +8,7 @@ fechar = Close
 nome = Name
 telefone = Phone
 email = Email
-endere\u00e7o = Address
+endereco = Address
 amostra = Sample
 sangueArterial = Arterial Blood
 sangueVenoso = Venous Blood
@@ -20,5 +20,5 @@ pele = Skin
 adicionar = Add
 cadastros = Registrations
 remover = Remove
-ordenarPorNome = Ordenar By Name
-ordenarPorEmail = Ordenar By Email
+ordenarPorNome = Order By Name
+ordenarPorEmail = Order By Email
